--- a/projects/js-web-share/index.html
+++ b/projects/js-web-share/index.html
@@ -69,6 +69,11 @@
                 font-size: 1rem;
                 margin: 0.5rem 0rem;
                 cursor: pointer;
+
+                &:disabled {
+                  background-color: #6c757d;
+                  cursor: not-allowed;
+                }
               }
 
               p {
