Finished web share

--- a/projects/js-web-share/index.html
+++ b/projects/js-web-share/index.html
@@ -90,7 +90,7 @@
 
                 <p>${
                   this.shareable
-                    ? "Click the 'Share' button to share the portfolio page. If nothing happens, your browser does not support the Web Share API."
+                    ? "Click the 'Share' button to share the portfolio page."
                     : "Your browser does not support the Web Share API."
                 }</p>
               </div>
