feat: Rewording on performance API project

--- a/projects/js-performance/index.html
+++ b/projects/js-performance/index.html
@@ -77,7 +77,7 @@
             return vdom`
               <div>
                 <div>
-                  <b>Render Function Loop FPS:</b> ${Math.round(this.smoothedFps)}
+                  <b>Render Function Loop (renders per second):</b> ${Math.round(this.smoothedFps)}
                 </div>
               </div>
             `;
