--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,12 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/chess-engine">Chess Engine</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-performance">JS Performance</a>
               </td>
             </tr>
