Removed chess engine project for now

--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
             <a href="/projects">experimenting</a>
             with, and
             <a href="/github">creating</a>
-            new technologies. I also dabble in building my own products, such as my
-            <a href="/projects/chess-engine">chess engine</a> and
+            new technologies. I also dabble in building my own products, such as
             <a href="https://github.com/ChristopherBilg/soma-notes">Soma Notes</a>.
           </p>
 
