--- a/projects/chess-engine/index.html
+++ b/projects/chess-engine/index.html
@@ -20,7 +20,7 @@
 
     <div id="work-in-progress"></div>
 
-    <main hidden>
+    <main>
       <a href="/projects">Back to Projects List</a>
 
       <h1>Chess Engine</h1>
