--- a/projects/chess-board/index.html
+++ b/projects/chess-board/index.html
@@ -15,9 +15,7 @@
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message"
-      >Please enable JavaScript in order to view this webpage.</noscript
-    >
+    <noscript id="full-screen-noscript-message">Please enable JavaScript in order to view this webpage.</noscript>
 
     <main>
       <a href="/projects">Back to Projects List</a>
@@ -25,9 +23,8 @@
       <h1>Chess Board</h1>
 
       <p>
-        The <b>Chess Board</b> project is built with <code>chess.js</code> and
-        <code>chessboard.js</code> and is a simple demonstration of a chess
-        board that you can play, flip, modify, and clear.
+        The <b>Chess Board</b> project is built with <code>chess.js</code> and <code>chessboard.js</code> and is a
+        simple demonstration of a chess board that you can play, flip, modify, and clear.
       </p>
 
       <hr style="margin-top: 2rem; margin-bottom: 2rem" />
