--- a/index.html
+++ b/index.html
@@ -184,9 +184,7 @@
     <main>
       <div id="introduction">
         <div>
-          <h1 id="name">
-            Hi, I'm <span class="black">Christopher Bilger</span>
-          </h1>
+          <h1 id="name"> Hi, I'm <span class="black">Christopher Bilger</span> </h1>
         </div>
       </div>
 
@@ -200,9 +198,7 @@
           <p class="details">
             You might know me from places like
             <a href="https://www.talkiatry.com/">Talkiatry</a> or
-            <a href="https://www.lockheedmartin.com/en-us/index.html"
-              >Lockheed Martin</a
-            >.
+            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>.
           </p>
 
           <p class="details">
@@ -216,22 +212,18 @@
           <p class="details">
             As a
             <span id="title" class="black">Senior Software Engineer</span>
-            at Talkiatry I'm building a platform to make mental health care more
-            accessible.
+            at Talkiatry I'm building a platform to make mental health care more accessible.
           </p>
 
           <p class="details">
             If you want to contact me,
-            <a href="mailto:christopherbilg@gmail.com">email</a> is the best way
-            to do so.
+            <a href="mailto:christopherbilg@gmail.com">email</a> is the best way to do so.
           </p>
 
           <nav id="navigation">
             <ul>
               <li>
-                <a href="https://www.linkedin.com/in/christopher-bilger/"
-                  >LinkedIn</a
-                >
+                <a href="https://www.linkedin.com/in/christopher-bilger/">LinkedIn</a>
               </li>
               <li><a href="/Christopher-Bilger-Resume.pdf">Resume</a></li>
               <li><a href="/portfolio">Portfolio</a></li>
