--- a/projects/index.html
+++ b/projects/index.html
@@ -30,9 +30,7 @@
           height="222.33"
           loading="lazy"
         />
-        <figcaption>
-          An image of a programmer with CSS code on the wall behind him
-        </figcaption>
+        <figcaption> An image of a programmer with CSS code on the wall behind him </figcaption>
       </figure>
 
       <section>
@@ -50,12 +48,7 @@
         <h2><a href="#projects">Projects</a></h2>
         <hr />
 
-        <input
-          type="text"
-          id="link-table-filter"
-          placeholder="Filter Projects..."
-          hidden
-        />
+        <input type="text" id="link-table-filter" placeholder="Filter Projects..." hidden />
 
         <table id="link-table">
           <tbody>
@@ -79,9 +72,7 @@
 
             <tr>
               <td>
-                <a href="/projects/transformers-js"
-                  >Transformers.js - AI/ML Directly in the Browser</a
-                >
+                <a href="/projects/transformers-js">Transformers.js - AI/ML Directly in the Browser</a>
               </td>
             </tr>
 
@@ -147,17 +138,13 @@
 
             <tr>
               <td>
-                <a href="/projects/browser-cryptography"
-                  >Browser Cryptography</a
-                >
+                <a href="/projects/browser-cryptography">Browser Cryptography</a>
               </td>
             </tr>
 
             <tr>
               <td>
-                <a href="/projects/simple-particle-interactions"
-                  >Simple Particle Interactions</a
-                >
+                <a href="/projects/simple-particle-interactions">Simple Particle Interactions</a>
               </td>
             </tr>
 
@@ -169,49 +156,37 @@
 
             <tr>
               <td>
-                <a href="/projects/side-notes"
-                  >Side Notes (Note-Taking Web App)</a
-                >
+                <a href="/projects/side-notes">Side Notes (Note-Taking Web App)</a>
               </td>
             </tr>
 
             <tr>
               <td>
-                <a href="/projects/password-generator"
-                  >Client-Only Password Generator</a
-                >
+                <a href="/projects/password-generator">Client-Only Password Generator</a>
               </td>
             </tr>
 
             <tr hidden>
               <td>
-                <a href="/projects/desktop-environment"
-                  >Desktop Environment (Webtop)</a
-                >
+                <a href="/projects/desktop-environment">Desktop Environment (Webtop)</a>
               </td>
             </tr>
 
             <tr hidden>
               <td>
-                <a href="/projects/tabbed-router-ui-demo"
-                  >Tabbed Router UI Demo (Torus)</a
-                >
+                <a href="/projects/tabbed-router-ui-demo">Tabbed Router UI Demo (Torus)</a>
               </td>
             </tr>
 
             <tr hidden>
               <td>
-                <a href="/projects/graphing-calculator"
-                  >Graphing Calculator (Torus)</a
-                >
+                <a href="/projects/graphing-calculator">Graphing Calculator (Torus)</a>
               </td>
             </tr>
 
             <tr hidden>
               <td>
-                <a href="/projects/game-of-life"
-                  >Conway's Game of Life (Torus)</a
-                >
+                <a href="/projects/game-of-life">Conway's Game of Life (Torus)</a>
               </td>
             </tr>
 
@@ -235,9 +210,7 @@
           const rows = tbody.getElementsByTagName("tr");
 
           Array.from(rows).forEach((element) => {
-            const content = element
-              .getElementsByTagName("td")[0]
-              .getElementsByTagName("a")[0];
+            const content = element.getElementsByTagName("td")[0].getElementsByTagName("a")[0];
 
             if (element.hidden) {
               content.innerHTML = "Hidden: " + content.innerHTML;
@@ -254,10 +227,7 @@
           let disabledCounter = 0;
 
           Array.from(rows).forEach((element) => {
-            const title = element
-              .getElementsByTagName("td")[0]
-              .getElementsByTagName("a")[0]
-              .innerHTML.toUpperCase();
+            const title = element.getElementsByTagName("td")[0].getElementsByTagName("a")[0].innerHTML.toUpperCase();
 
             if (title.includes(filter)) {
               element.hidden = false;
@@ -289,9 +259,7 @@
         handleInput();
 
         // Run on every input event
-        document
-          .getElementById("link-table-filter")
-          .addEventListener("input", handleInput);
+        document.getElementById("link-table-filter").addEventListener("input", handleInput);
       })();
     </script>
 
