Update 404 page CSS

--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-      <p style="text-align: center">Error 404: Page Not Found</p>
+      <p style="text-align: center; font-weight: bold">Error 404: Page Not Found</p>
     </main>
 
     <nova-command-palette />
