--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
       .details {
         font-size: 1.5rem;
+        font-weight: 500;
         margin: 2rem 0;
         max-width: 900px;
       }
