--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,12 @@
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta property="og:url" content="https://chrisbilger.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Chris Bilger's Portfolio" />
+    <meta property="og:description" content="Christopher Bilger's Portfolio" />
+    <meta property="og:image" content="https://chrisbilger.com/images/portfolio.avif" />
+
     <title>Chris Bilger, M.C.S. | Portfolio</title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
     <link rel="stylesheet" media="screen" href="../css/mvp.css" />
