--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:url" content="https://chrisbilger.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Chris Bilger">
-    <meta property="og:description" content="Christopher Bilger's Portfolio">
-    <meta property="og:image" content="https://chrisbilger.com/images/portfolio.avif">
+    <meta property="og:url" content="https://chrisbilger.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Chris Bilger" />
+    <meta property="og:description" content="Christopher Bilger's Portfolio" />
+    <meta property="og:image" content="https://chrisbilger.com/images/portfolio.avif" />
 
     <title>Chris Bilger</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
