--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta property="og:url" content="https://chrisbilger.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Chris Bilger" />
+    <meta property="og:title" content="Chris Bilger's Portfolio" />
     <meta property="og:description" content="Christopher Bilger's Portfolio" />
     <meta property="og:image" content="https://chrisbilger.com/images/portfolio.avif" />
 
