--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,12 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/js-web-midi">JS Web MIDI</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-network-information">JS Network Information</a>
               </td>
             </tr>
