--- a/projects/chess-board/index.html
+++ b/projects/chess-board/index.html
@@ -23,8 +23,8 @@
       <h1>Chess Board</h1>
 
       <p>
-        The <b>Chess Board</b> project is built with <code>chess.js</code> and <code>chessboard.js</code> and is a
-        simple demonstration of a chess board that you can play, flip, modify, and clear.
+        The <b>Chess Board</b>project is built with <code>chess.js</code>and <code>chessboard.js</code>and is a simple
+        demonstration of a chess board that you can play, flip, modify, and clear.
       </p>
 
       <hr style="margin-top: 2rem; margin-bottom: 2rem" />
