Added two new courses that I completed

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -395,33 +395,23 @@
         </h2>
         <hr />
 
-        <!-- <p>
-          <b class="certification-and-course-title">GitHub Certifications: GitHub Advanced Security</b>
+        <p>
+          <b class="certification-and-course-title">Stanford: Child Nutrition and Cooking</b>
           <br />
-          GitHub Advanced Security is a course that teaches how to secure your software development workflows and
-          repositories on GitHub. The course covers topics such as code scanning, secret scanning, and dependency
-          review.
+          This course provides an overview of the role of nutrition in child development and includes discussions on the
+          impact of nutrition on growth, development, and overall health.
           <br />
-          <em class="certification-and-course-date">INSERT DATE HERE</em>
-        </p> -->
+          <em class="certification-and-course-date">October 2024</em>
+        </p>
 
-        <!-- <p>
-          <b class="certification-and-course-title">GitHub Certifications: GitHub Actions</b>
+        <p>
+          <b class="certification-and-course-title">Stanford: Stanford Introduction to Food and Health</b>
           <br />
-          GitHub Actions is a course that teaches how to automate, customize, and execute your software development
-          workflows right in your repository.
+          This course provides an overview of the role of food in health and includes discussions on the impact of
+          nutrition on health, the role of food in disease prevention, and the importance of a balanced diet.
           <br />
-          <em class="certification-and-course-date">INSERT DATE HERE</em>
-        </p> -->
-
-        <!-- <p>
-          <b class="certification-and-course-title">GitHub Certifications: GitHub Foundations</b>
-          <br />
-          GitHub Foundations is a course that teaches the basics of using GitHub, including how to create a repository,
-          commit changes, and collaborate with others.
-          <br />
-          <em class="certification-and-course-date">INSERT DATE HERE</em>
-        </p> -->
+          <em class="certification-and-course-date">October 2024</em>
+        </p>
 
         <p>
           <b class="certification-and-course-title">
