--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -367,6 +367,15 @@
         </h2>
         <hr />
 
+        <!-- <p>
+          <b class="certification-and-course-title">IBM: Generative AI for Software Developers Specialization</b>
+          <br />
+          This specialization covers the fundamentals of generative AI and how to use it to create software
+          applications.
+          <br />
+          <em class="certification-and-course-date">January 2025</em>
+        </p> -->
+
         <p>
           <b class="certification-and-course-title">Stanford: Child Nutrition and Cooking</b>
           <br />
