Added new (eventual) certification

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -355,12 +355,21 @@
         <hr />
 
         <!-- <p>
+          <b class="certification-and-course-title">Google UX Design Professional Certificate</b>
+          <br />
+          This certificate program covers the principles of UX design and how to apply them to create user-friendly
+          products and interfaces. The program includes courses on user research, prototyping, and usability testing.
+          <br />
+          <em class="certification-and-course-date">INSERT COMPLETION DATE</em>
+        </p> -->
+
+        <!-- <p>
           <b class="certification-and-course-title">IBM: Generative AI for Software Developers Specialization</b>
           <br />
           This specialization covers the fundamentals of generative AI and how to use it to create software
           applications.
           <br />
-          <em class="certification-and-course-date">January 2025</em>
+          <em class="certification-and-course-date">INSERT COMPLETION DATE</em>
         </p> -->
 
         <p>
