--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -322,26 +322,26 @@
 
         <p>
           I have a proven track record of working on high-output Agile teams using both Scrum and Kanban methodologies.
-          My experience encompasses self-hosted GitLab instances and full Atlassian suite production environments, and I
-          have the technical skills required to plan, implement, and maintain complex and dynamic systems.
+          I am committed to consistently delivering high-quality software engineering solutions.
         </p>
 
         <p>
           As a full-stack software engineer, I have a responsibility to remain current with the latest trends in
           frontend, middleware, and backend web development technologies. I have professional experience working with a
-          variety of tech stacks, including MERN, MEVN, Django, Java Springboot, AWS, and Azure, among others.
+          variety of tech stacks, including Ruby on Rails, NextJS, NestJS, etc.
         </p>
 
         <p>
-          I have a strong proficiency in React and Vue as frontend frameworks, Express JS as middleware, and NodeJS and
-          Django on the backend. My database expertise encompasses both SQL and NoSQL databases.
+          I have a strong proficiency in React and Vue as frontend frameworks, Express JS as middleware, and NodeJS on
+          the backend. My database expertise encompasses both SQL and NoSQL databases, as well as experience with
+          GraphQL and RESTful APIs.
         </p>
 
         <p>
           I continuously expand my knowledge and skills in various areas of software engineering, including frameworks,
           methodologies, tech stacks, development workflows, and processes. I place a high emphasis on producing
           well-written, thought-out code and ensure that my code is properly documented, linted, formatted, and style
-          checked. I am committed to consistently delivering high-quality software engineering solutions.
+          checked.
         </p>
       </section>
 
