--- a/projects/xyz-love-letters/index.html
+++ b/projects/xyz-love-letters/index.html
@@ -223,7 +223,7 @@
                         </div>
 
                         <div class="centered">
-                          <label for="pass"><h2>Password:</h2></label>
+                          <label for="passwordInput"><h2>Password:</h2></label>
                         </div>
 
                         <div class="centered">
