--- a/victoria-bilger/index.html
+++ b/victoria-bilger/index.html
@@ -215,7 +215,7 @@
                     ? vdom`
                       <div>
                         <div class="centered">
-                          <label for="pass"><h2>Password:</h2></label>
+                          <label for="passwordInput"><h2>Password:</h2></label>
                         </div>
 
                         <div class="centered">
