Gen AI specialization

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -363,14 +363,14 @@
           <em class="certification-and-course-date">INSERT COMPLETION DATE</em>
         </p> -->
 
-        <!-- <p>
+        <p>
           <b class="certification-and-course-title">IBM: Generative AI for Software Developers Specialization</b>
           <br />
           This specialization covers the fundamentals of generative AI and how to use it to create software
           applications.
           <br />
-          <em class="certification-and-course-date">INSERT COMPLETION DATE</em>
-        </p> -->
+          <em class="certification-and-course-date">January 2025</em>
+        </p>
 
         <p>
           <b class="certification-and-course-title">Stanford: Child Nutrition and Cooking</b>
