--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -378,14 +378,14 @@
         </h2>
         <hr />
 
-        <!-- <p>
+        <p>
           <b class="certification-and-course-title">Google UX Design Professional Certificate</b>
           <br />
           This certificate program covers the principles of UX design and how to apply them to create user-friendly
           products and interfaces. The program includes courses on user research, prototyping, and usability testing.
           <br />
-          <em class="certification-and-course-date">INSERT COMPLETION DATE</em>
-        </p> -->
+          <em class="certification-and-course-date">March 2025</em>
+        </p>
 
         <p>
           <b class="certification-and-course-title">IBM: Generative AI for Software Developers Specialization</b>
