--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -266,6 +266,18 @@
         <hr />
 
         <aside>
+          <h3>Presenter: PostgreSQL and Us</h3>
+          <p>
+            <a href="/presentations/postgresql-and-us" target="_blank">Slideshow</a>
+          </p>
+          <p>March 2025</p>
+          <p>
+            I created and presented a talk on how to most effectively use, debug, optimize, and maintain PostgreSQL
+            databases. This talk was given to a group of software engineers and developers at Talkiatry.
+          </p>
+        </aside>
+
+        <aside>
           <h3>Author, Developer, & Maintainer</h3>
           <p>
             April 2023 -
