--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
       <div id="content">
         <div>
           <h2 id="description">
-            I'm a Software Engineer specializing in
-            <span class="black">Product Development</span>.
+            I'm a <span class="black">Senior Software Engineer</span> specializing in Product Development.
           </h2>
 
           <p class="details">
